# particle_vtools

./: .gitignore  README.md  environment.yml  pyproject.toml
case/: 073.py  074.py  075.py  duo_073_cmp.py  linqi_particle_cmp.py  liqi_track_cmp.py
demo/: 3d_explore.py  duo_track.py  duo_view.py
ipynb/: demo.ipynb
particle_vtools/: Explorer3D.py  FluidStructure.py  Particle.py  PoreStructure.py  utils.py
